--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -358,26 +358,46 @@
                     
                     <div class="service-card" style="--delay: 0s;">
                         <span class="icon">🌷</span>
-                        <h3>Service Offering Title 1</h3>
-                        <p>Service Description/Detail Paragraph</p>
+                        <h3>Spring Services</h3>
+                        <p>The services we provide during the spring are:</p>
+                        <ul>
+                            <li>a</li>
+                            <li>b</li>
+                            <li>c</li>
+                        </ul>
                     </div>
 
                     <div class="service-card" style="--delay: 0.1s;">
                         <span class="icon">🌞</span>
-                        <h3>Service Offering Title 2</h3>
-                        <p>Service Description/Detail Paragraph</p>
+                        <h3>Summer Services</h3>
+                        <p>The services we provide during the summer are:</p>
+                        <ul>
+                            <li>a</li>
+                            <li>b</li>
+                            <li>c</li>
+                        </ul>
                     </div>
 
                     <div class="service-card" style="--delay: 0.2s;">
                         <span class="icon">🍁</span>
-                        <h3>Service Offering Title 3</h3>
-                        <p>Service Description/Detail Paragraph</p>
+                        <h3>Autumn Services</h3>
+                        <p>The services we provide during the autumn are:</p>
+                        <ul>
+                            <li>a</li>
+                            <li>b</li>
+                            <li>c</li>
+                        </ul>
                     </div>
 
                     <div class="service-card" style="--delay: 0.3s;">
                         <span class="icon">🌨️</span>
-                        <h3>Service Offering Title 4</h3>
-                        <p>Service Description/Detail Paragraph</p>
+                        <h3>Winter Services</h3>
+                        <p>The services we provide during the winter are:</p>
+                        <ul>
+                            <li>a</li>
+                            <li>b</li>
+                            <li>c</li>
+                        </ul>
                     </div>
 
                 </div>
