--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -195,7 +195,7 @@
         
         .service-card .icon, .usp-card .icon, .guarantee-card .icon { font-size: 2.5rem; margin-bottom: 15px; display: block; }
         .service-card h3 { font-size: 1.4rem; font-weight: 700; margin-bottom: 10px; color: var(--color-accent); }
-        .service-card li { font-size: .8rem; font-weight: 700; margin-bottom: 10px; color: ##8a9488; }
+        .service-card li { font-size: .6rem; font-weight: 700; margin-bottom: 10px; color: #8a9488; }
         .usp-card { border: 2px solid var(--color-primary); }
         .usp-card .icon { color: var(--color-accent); }
         .guarantee-card { border-bottom: 5px solid var(--color-accent); height: 100%; display: flex; flex-direction: column; align-items: center; }
