--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -412,21 +412,21 @@
                 <div class="card-grid reveal">
                     
                     <div class="usp-card" style="--delay: 0s;">
-                        <span class="icon">🎧</span>
+                        <span class="icon">🍃</span>
                         <h3>We are 100% Eco-Friendly</h3>
                         <p>On top of utilizing Hydrodynamically powered tools, we utilize reusable containers for all of your compostable needs, as well as hydro-electrically powered transport vehicles and ridable mowers, etc.</p>
                     </div>
 
                     <div class="usp-card" style="--delay: 0.1s;">
-                        <span class="icon">🐾</span>
+                        <span class="icon">📅</span>
                         <h3>We operate all-season...</h3>
                         <p>However - Instead of just offering a handful of set jobs all season, we offer seasonal operations such as snow shoveling, gutter cleaning, gardening, leaf removal... and more!</p>
                     </div>
 
                     <div class="usp-card" style="--delay: 0.2s;">
                         <span class="icon">💰</span>
-                        <h3>Competitive Advantage Feature 3</h3>
-                        <p>Feature Detail/Proof Point Paragraph 3</p>
+                        <h3>Our plans differ based on your needs</h3>
+                        <p>We differ from the opposition by providing one-time, contracted (large company contracts for multiple spaces, etc.), Subscription-based on YOUR time, and other plans.. if you would like to request a quote, click here: <a href="https://kymiira.github.io/CLEBusinessProposition/public/pages/index.html#feasibility">quote</a>.</p>
                     </div>
 
                 </div>
@@ -440,8 +440,8 @@
                     
                     <div class="guarantee-card" style="--delay: 0s;">
                         <span class="icon">✨</span>
-                        <h3>Guarantee Policy Title 1</h3>
-                        <p>Guarantee Policy Detail Paragraph</p>
+                        <h3>We have a 100% Guarantee towards efficiency as well as quality</h3>
+                        <p>We can guarantee that your job will be perfect, and if not - we offer discounted commission OR cost-free, contact our support at EnvioCare@support.ca</p>
                     </div>
 
                     <div class="guarantee-card" style="--delay: 0.1s;">
