--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -253,16 +253,48 @@
 
                 <div class="contact-form-box reveal">
                     <form id="contact-static-form">
-                        <div class="form-group"> <!-- each form group is going to be 1 form section -->
-                            <!--
-                                form stuff
-                            -->
+                        <div class="form-group"> <!-- user contact info -->
+                            <p>Your contact info:</p>
+                            <input type="email" placeholder="example@email.com"><br>
+                            <input type="tel" placeholder="(555)-778-5032"><br>
                         </div>
                         
-                        <div class="form-group">
-                            <!--
-                                form stuff
-                            -->
+                        <div class="form-group"> <!-- -->
+                            <details>
+                                <summary>Year-round services</summary>
+                                <label>
+                                    <input type="checkbox">
+                                    service 1
+                                </label><br>
+                            </details><br>
+                            <details>
+                                <summary>Spring services</summary>
+                                <label>
+                                    <input type="checkbox">
+                                    service 1
+                                </label><br>
+                            </details><br>
+                            <details>
+                                <summary>Summer services</summary>
+                                <label>
+                                    <input type="checkbox">
+                                    service 1
+                                </label><br>
+                            </details><br>
+                            <details>
+                                <summary>Fall services</summary>
+                                <label>
+                                    <input type="checkbox">
+                                    service 1
+                                </label><br>
+                            </details><br>
+                            <details>
+                                <summary>Winter services</summary>
+                                <label>
+                                    <input type="checkbox">
+                                    service 1
+                                </label><br>
+                            </details><br>
                         </div>
                         
                         <div class="form-group">
