--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -259,7 +259,7 @@
                             <input type="tel" placeholder="(555)-778-5032"><br>
                         </div>
                         
-                        <div class="form-group"> <!-- -->
+                        <div class="form-group"> <!-- create classes for the details tags, center the checkboxes and the labels, create more services, etc. -->
                             <details>
                                 <summary>Year-round services</summary>
                                 <label>
