--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -20,11 +20,11 @@
             
             <nav class="nav-links">
                 <a href="#home">Home</a>
-                <a href="#services">Services Section</a>
-                <a href="#usps">Competitive Edge</a> 
-                <a href="#guarantee">Trust & Guarantee</a>
-                <a href="#commitment">Company Ethos</a>
-                <a href="#feasibility">Feasibility Demo</a> 
+                <a href="#services">What do we provide?</a>
+                <a href="#usps">Why choose us?</a> 
+                <a href="#guarantee">How trustable are we?</a>
+                <a href="#commitment">What are our values?</a>
+                <a href="#feasibility">Contact our support w/ a quote!</a> 
             </nav>
 
             <button class="mobile-menu-button" id="mobile-menu-button" aria-label="Toggle menu">
