--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -20,10 +20,10 @@
             
             <nav class="nav-links">
                 <a href="#home">Home</a>
-                <a href="#services">What do we provide?</a>
-                <a href="#usps">Why choose us?</a> 
-                <a href="#guarantee">How trustable are we?</a>
-                <a href="#commitment">What are our values?</a>
+                <a href="#services">Services</a>
+                <a href="#usps">Why choose Us?</a> 
+                <a href="#guarantee">Trustability</a>
+                <a href="#commitment">Company Values</a>
                 <a href="#feasibility">Contact our support w/ a quote!</a> 
             </nav>
 
