--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -229,7 +229,7 @@
 
         <section id="guarantee" class="guarantee section-padding">
             <div class="container">
-                <h2>We can guaruntee our services follow specific guidlines, we've highlighted 3 below:</h2>
+                <h2>Our teams follow incredibly specific guidelines to make sure your environmental care is dealt with!</h2>
                 <div class="card-grid reveal">
                     
                     <div class="guarantee-card" style="--delay: 0s;">
