--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -259,7 +259,7 @@
             <div class="container commitment-content">
                 
                 <div class="commitment-text reveal">
-                    <h2>We follow multiple guidelines based on what we offer and how we push towards these guidelines.</h2>
+                    <h2>Our values are dedicated towards both keeping your life stress free and the environment clean!</h2>
                     <ul class="feature-list">
                         <li>
                             <svg width="24" height="24" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
@@ -279,7 +279,7 @@
                 </div>
 
                 <div class="commitment-graphic reveal">
-                    <span>Clean, Manageable Maintenance</span>
+                    <span>Clean, Manageable Care</span>
                 </div>
 
             </div>
