--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -6,7 +6,6 @@
     <title>CLE Business Prop Website</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://kymiira.github.io/CLEBusinessProposition/public/pages/css-modules/index.css" rel="stylesheet">
-    <!-- All styles are now embedded below -->
 
 </head>
 <body>
@@ -90,7 +89,6 @@
             <div class="container">
                 <h2>Services We Offer:</h2>
                 
-                <!-- START UPDATED SERVICE LIST STRUCTURE: Full-Width Scrolls -->
                 <div class="service-list-container reveal">
                     
                     <!-- Spring Services -->
@@ -194,7 +192,6 @@
                     </div>
 
                 </div>
-                <!-- END UPDATED SERVICE LIST STRUCTURE -->
 
             </div>
         </section>
@@ -295,7 +292,7 @@
 
                 <div class="contact-form-box reveal">
                     <form id="contact-static-form">
-                        <div class="form-group"> <!-- user contact info -->
+                        <div class="form-group">
                             <p>Your contact info:</p>
                             <input type="email" placeholder="example@email.com"><br>
                             <input type="tel" placeholder="(555)-778-5032"><br>
@@ -353,7 +350,6 @@
         </div>
     </footer>
 
-    <!-- External JS for the mobile menu and reveal effects is still included, as it's outside the scope of the styling fix. -->
     <script src="https://kymiira.github.io/CLEBusinessProposition/public/pages/js-modules/index.js" defer></script>
 </body>
 </html>
